Update IDS Week 2_2 1_23_IN-CLASS.ipynb

--- a/IDS Week 2_2 1_23_IN-CLASS.ipynb
+++ b/IDS Week 2_2 1_23_IN-CLASS.ipynb
@@ -9,7 +9,7 @@
     "# Introduction to Testing in Python\n",
     "\n",
     "## Why Test Code?\n",
-    "- Testing ensures your code behaves as expected.\n",
+    "- Testing ensures your code behaves as expected!\n",
     "- It helps you catch errors early, saving time in debugging.\n",
     "- Good testing improves code quality and makes collaboration easier.\n",
     "\n",
